err/iotrelay-pywws.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/iotrelay-1.2.3.dist-info'...
Listing './lib/python3.5/site-packages/iotrelay_pywws-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/pywws'...
Listing './lib/python3.5/site-packages/pywws/examples'...
Listing './lib/python3.5/site-packages/pywws/examples/graph_templates'...
Listing './lib/python3.5/site-packages/pywws/examples/graph_templates/pngcairo'...
Listing './lib/python3.5/site-packages/pywws/examples/modules'...
Listing './lib/python3.5/site-packages/pywws/examples/scripts'...
Listing './lib/python3.5/site-packages/pywws/examples/scripts/data_mangling'...
Compiling './lib/python3.5/site-packages/pywws/examples/scripts/data_mangling/rain_offset.py'...
***   File "./lib/python3.5/site-packages/pywws/examples/scripts/data_mangling/rain_offset.py", line 24
    except getopt.error, msg:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pywws/examples/scripts/data_mangling/temperature_despike.py'...
***   File "./lib/python3.5/site-packages/pywws/examples/scripts/data_mangling/temperature_despike.py", line 26
    except getopt.error, msg:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pywws/examples/templates'...
Listing './lib/python3.5/site-packages/pywws/examples/templates/google_charts'...
Listing './lib/python3.5/site-packages/pywws/lang'...
Listing './lib/python3.5/site-packages/pywws/lang/da'...
Listing './lib/python3.5/site-packages/pywws/lang/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pywws/lang/de'...
Listing './lib/python3.5/site-packages/pywws/lang/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pywws/lang/el'...
Listing './lib/python3.5/site-packages/pywws/lang/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pywws/lang/es'...
Listing './lib/python3.5/site-packages/pywws/lang/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pywws/lang/fi'...
Listing './lib/python3.5/site-packages/pywws/lang/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pywws/lang/fr'...
Listing './lib/python3.5/site-packages/pywws/lang/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pywws/lang/it'...
Listing './lib/python3.5/site-packages/pywws/lang/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pywws/lang/nl'...
Listing './lib/python3.5/site-packages/pywws/lang/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pywws/lang/ru'...
Listing './lib/python3.5/site-packages/pywws/lang/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pywws/lang/sv'...
Listing './lib/python3.5/site-packages/pywws/lang/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pywws/services'...
Listing './lib/python3.5/site-packages/pywws-17.11.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tzlocal'...
Listing './lib/python3.5/site-packages/tzlocal/test_data'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/localtime'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/localtime/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share/zoneinfo'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting/etc/conf.d'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo/var'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo/var/db'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting/etc/sysconfig'...
Listing './lib/python3.5/site-packages/tzlocal-1.5.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
